--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "captchapng": "0.0.1",
     "connect-history-api-fallback": "^1.5.0",
+    "connect-redis": "^3.3.3",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.16.0",
+    "express-session": "^1.15.6",
     "jsonwebtoken": "^8.2.1",
     "md5": "^2.2.1",
     "morgan": "~1.9.0",
